--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for File-RsyBak-Unpacked
 
-0.28    2015-10-20 (PERLANCAR) (unreleased)
+0.28    2015-10-21 (PERLANCAR)
 
         - First release.
