[dist] Update release note style in Changes

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.29    2015-10-22 (PERLANCAR)
+0.29    2015-10-22  Released-By: PERLANCAR
 
 	- No functional changes.
 
@@ -6,6 +6,6 @@
 	  its deps fixed.
 
 
-0.28    2015-10-21 (PERLANCAR)
+0.28    2015-10-21  Released-By: PERLANCAR
 
         - First release.
